# serverless-deployments

./: Cargo.toml  README.md
deployer/: Cargo.toml
deployer/src/: main.rs
serverless_deploy/: Cargo.toml
serverless_deploy/src/: error.rs  lib.rs
serverless_gradio/: Dockerfile.lambda  README.md  app.py  build.sh  cdk.py
