[package]
name = "serverless_deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aws sdk
aws-config = "0.49"
aws-types = "0.49"
aws-sdk-lambda = "0.19.0"

anyhow = "1"
tokio = { version = "1.18.2", features = ["full"] }
